--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,14 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/fcjmkl2375/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fcjmkl2375/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775078.md#1" target="_blank">【新闻看点】美再出新招：限制AI等技术出口</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775078.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/GettyImages-1055941042-150x120.jpg" align ="left"></a>美国政府推出了“人工智能准则”，除了在美国国内推广人工智能，也将在国际上对抗极权国家利用人工智能压迫本国人民。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 5:51 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11774504.md#1" target="_blank">美斩首伊朗将军 学者：等于打背后的中共</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11774504.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/22fa8fe969244ec7ceb1eff83cc5f37a-150x120.png" align ="left"></a>对于美军日前击杀伊朗军事领袖苏雷曼尼（Qasem Soleimani）导致美伊紧张情势升高，总体经济学家吴嘉隆7日指出，伊朗应该不至于跟美国真的摊牌，美国与伊朗之间应该还不至于开战，只是金融市场需要一些时间来明白这件事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 5:42 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11774593.md#1" target="_blank">台湾民主蓬勃发展 吴怡农：对中港同样重要</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11774593.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/f619a0c05d7d9a95eb2d155cbfb0a9e3-150x120.jpg" align ="left"></a>2020总统、立委选举进入最后倒数，民进党台北市第3选区（中山、北松山）立委候选人吴怡农7日表示，台湾不仅是阻挡中共渗透的第一线，也证明民主可以在华人世界中蓬勃发展，这对中国大陆与香港同样重要，若中国今天也能施行“民主”，更多人的生活将变得不一样。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 5:39 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775353.md#1" target="_blank">男童高烧20天不退花5万元 却是体温计坏了</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775353.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/94fafb5ea7524a4584b8b2f6329a8356-150x120.jpeg" align ="left"></a>新年刚过，大陆荒唐医疗闹剧频传。浙江一名3岁大的儿童送医后突然高烧，并且20天不退，花了五万多块钱后才意外发现，儿子的身体压根儿没问题，是医院的体温计坏了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 5:32 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775116.md#1" target="_blank">【热点互动】武汉肺炎蔓延 信息封锁如何自保？</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775116.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e7a938259553e0_ttl7day2x8_18cb108102728f8d-1-150x120.jpg" align ="left"></a>今天是2020年1月6日，星期一。武汉的不明肺炎仍然在蔓延，周日的时候武汉当局宣布已经有59个病例，而截至周一，香港方面宣布疑似病例已经有21例。不过武汉当局称已经排除了是SARS，但宣传上是比较低调，而香港当局则将应对的级别提高到严重，并且定性这个武汉的肺炎为新型传染病。那么这个武汉的不明肺炎到底有可能有多大的危害？中国官方是否会重复当年SARS管控讯息的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 4:44 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775172.md#1" target="_blank">武汉爆发神秘肺炎 美驻华使馆发健康警告</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775172.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1847840-150x120.jpg" align ="left"></a>美国驻中国大使馆周二（1月7日）表示，随着中国神秘肺炎的爆发，在中国旅行的美国人应避免和动物接触，以及避免与病人接触。与此同时，大陆网民对中共曾隐瞒SARS疫情心有余悸。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 3:20 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775102.md#1" target="_blank">中共将修改“反垄断法” 罚金增百倍</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775102.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Lexus_of_Sapporo-150x120.jpg" align ="left"></a>中共将首次大幅修改“反垄断法”，处罚金额大幅度提高，高达原来金额的百倍，市场注意到，中共“反垄断法”以往主要针对在大陆的外资企业。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 3:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775204.md#1" target="_blank">消炎药开成癫痫药 吉林6岁女童短暂失明</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775204.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Untitled-4-150x120.jpg" align ="left"></a>吉林张先生的女儿因发烧到吉林儿童医院就诊，两三天后女童却出现了神志不清、眼睛暂时性失明的情况。家人带女儿到其它医院检查，才得知医生开错药。然而院方却表示并非重大事故。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 3:06 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775178.md#1" target="_blank">新研究曝光：中共重商主义杀伤力 鲜为人知</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775178.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/shutterstock_611487914-150x120.jpg" align ="left"></a>一项新的研究表明，中国（中共）自2001年加入世界贸易组织（WTO）以来，所采取的不公平贸易措施对其它国家的损害程度远超想像，特别是伤害了发达国家的工业创新，导致他国公司（尤其是北美和欧洲的公司）失去了在先进工业的竞争优势。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 3:04 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769986.md#1" target="_blank">【2019盘点】中共对法轮功学员残酷迫害</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769986.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/12-1-150x120.jpg" align ="left"></a>2019年是中共迫害法轮功的第20个年头，中共依旧实施“名誉上搞臭、肉体上消灭、经济上截断”的迫害政策，对法轮功学员的迫害依旧惨烈、无与伦比。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 2:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775066.md#1" target="_blank">暴跌90% 大陆电商巨头市值蒸发173亿</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775066.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1068963994-150x120.jpg" align ="left"></a>有着大陆“时尚电商第一股”之称的蘑菇街，2019年以来，蘑菇街股价累计下跌89%，相比最高峰时期25.69美元/股，总市值蒸发超173亿（人民币，下同）......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 2:27 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775026.md#1" target="_blank">美推行业准则 对抗中共用人工智能压迫人民</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775026.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NI2EQ-150x120.jpg" align ="left"></a>2020年1月7号，美国政府推出《人工智能准则》，除了在美国国内推广人工智能，也将在国际上对抗中共等极权国家利用人工智能压迫本国人民。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 2:02 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11774999.md#1" target="_blank">延安男子被副乡长绑走 妻子苦寻21年无果</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11774999.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/5995acf5ly1ganrof4pkyj20u014otc7-150x120.jpg" align ="left"></a>湖南省怀化市去年中揭发的中学操场埋尸案，牵动了不少其他失踪案件的家属对久别亲人安危的忧虑。陕西省村民刘志斌21年前因维权被副乡长率众绑走后就此消失，妻子多年来苦寻无果，官方亦刻意推诿隐瞒。知情人士怀疑是翻版的操场埋尸案，但因涉及政府及国企，以致多年无人愿意介入跟进。事件近日曝光后受到关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 1:24 AM							</td></tr>
@@ -34,6 +24,16 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11774228.md#1" target="_blank">武汉男子推特批中共 遭判刑1年3个月</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11774228.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1409121712462269-600x400-150x120.jpg" align ="left"></a>湖北武汉一名56岁男子因多次在Twitter上发布批评中共高层的政策及有关“六四”等敏感言论，上个月遭到中共当局判刑1年3个月。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 4:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11773085.md#1" target="_blank">【揭秘】中共如何利用捷克首富打造形象</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11773085.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1020637456-600x400-150x120.jpg" align ="left"></a>英国《卫报》周日（1月5日）报导说，捷克亿万富豪疑出于自身商业利益，资助公关公司、为中国（中共）买形象；与此同时，捷克安全部门表示，中共对捷克构成的威胁远甚于他国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 4:19 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773698.md#1" target="_blank">涉权钱交易及淫乱 长城资产前高管被双开</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773698.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shangzhiguo-Web-Banner-1200x800-v3-150x120.jpg" align ="left"></a>大陆金融界近期震荡。中国长城资产管理股份有限公司（简称长城资产）前总裁助理桑自国日前被“双开”并移送司法。桑自国被指大搞权钱交易，收受巨额贿赂，与多名女性淫乱等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 3:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11772779.md#1" target="_blank">【直播回放】民进党立委候选人吴怡农记者会</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11772779.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/800x600_542451914123-150x120.jpg" align ="left"></a>2020台湾大选进入倒数，不但总统候选人激烈竞争，立委选情也趋白热化，其中以台北市第三选区的吴怡农和蒋万安的竞争最为激烈。1月7日吴怡农将召开竞选国际记者会。新唐人电视台和《大纪元时报》进行全程追踪和网络直播。请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 1:13 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773600.md#1" target="_blank">组图：北京降大雪 逾百航班被取消</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773600.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1191956272-150x120.jpg" align ="left"></a>1月5日至6日，北京出现降雪天气。全市大部分地区中雪，延庆、大兴、通州、朝阳、顺义等局地达大雪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 12:58 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773386.md#1" target="_blank">大陆多地现共享汽车“坟场”疑为骗补贴</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773386.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/VCG111182444419-150x120.jpg" align ="left"></a>近年来，大陆浙江等地出现了放置共享汽车的所谓“坟场”，一般在这些地方有数百量汽车，这些汽车风吹日晒，而公司却不把这些汽车拿去报废，日前，有陆媒揭示了其中的奥秘。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 12:52 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11772093.md#1" target="_blank">内幕：亡党之音弥漫中共内部</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11772093.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1602140930592039-600x400-150x120.jpg" align ="left"></a>过去的2019年，中共政权陷入前所未有的内外交困乱局。而中共智囊已经开始发表各类“亡党之音”，还有中共高层幕僚向外透露，中共已经进入了死胡同，随时垮台。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:48 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773570.md#1" target="_blank">受降雪等影响 大陆8省逾百条高速路封闭</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773570.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1191956262-150x120.jpg" align ="left"></a>由于大陆大范围降雪，河北、山西、辽宁、吉林、黑龙江、山东、河南、陕西境内共计112条高速115个路段封闭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773503.md#1" target="_blank">致7.5亿彩票费流失 福彩中心前高官获刑11年</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773503.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/7a899e510fb30f2411e35e11c595d143ad4b03a2_meitu_1-600x400-150x120.jpg" align ="left"></a>中共民政部下辖的福利彩票发行管理中心（下称“福彩中心”）前主任王素英已被判刑11年。王素英被指滥用职权导致7.5亿余元（人民币，下同）彩票业务费流失。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773493.md#1" target="_blank">中华民国大选倒计时 黄之锋吁台湾人要投票</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773493.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/6e60a72c3f01abd448d4d854eb053749-150x120.jpg" align ="left"></a>中华民国总统选举倒数计时，香港众志秘书长黄之锋呼吁台湾民众，尤其是年轻人，1月11日一定要投票。他重申“今日台湾、明日香港”，盼有一天香港人也能像台湾人一样选自己的政府。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773607.md#1" target="_blank">北林大9名女学生死伤车祸案 司机被判死刑</a><br></h3>近日，2017年搭载北京林业大学9名女生旅行的面包车司机赵某某被判处死刑，缓刑2年。当时该面包车出车祸，9名女生4死5伤，另有2名同乘女生亦受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 2:28 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773738.md#1" target="_blank">武汉市委书记辞去人大职务</a><br></h3>在武汉不明肺炎疫情持续扩散之际，现任中共湖北省委副书记、武汉市委书记马国强辞去武汉市人大职务，引关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 1:07 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773714.md#1" target="_blank">每日三退声明精选（2020/01/06）</a><br></h3>我是一个年近古稀的老人了，经历了文化大革命，也被共产党迫害过，但是由于环境闭塞，受党文化影响，一直没有看清共匪的邪恶，现在经历过很多大法的神奇事情，渐渐理解了无神论是邪恶，现在自愿退出共产党的少先队组织，希望更多的人能认清共产邪党的邪恶，与它划清界限。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 12:11 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773543.md#1" target="_blank">前河南政法委书记吴天君之子获刑二年</a><br></h3>中共河南省前政法委书记吴天君在获刑两年多后，其子吴建业因受贿罪，在2019年11月7日被判处有期徒刑2年，缓刑3年，并处罚金20万元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413_5.md#1<br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_5.htm">http://www.epochtimes.com/gb/nsc413_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
