--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -20,7 +20,13 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766427.md#1" target="_blank">张林：共军在朝鲜战争中丧生两百万（2）</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766427.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Korean_War_Montage_2-600x350-600x350-1-150x120.png" align ="left"></a>章国隆说，更多共军生病发烧，死于途中。每次一个连队近百人从丹东出发，一个来回步行一个月左右，一般都有四分之一的减员，就是死于非命。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:39 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766288.md#1" target="_blank">王友群：如何看中美将签署第一阶段贸易协议</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766288.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1180494181-1-600x400-150x120.jpg" align ="left"></a>美国总统川普表示，1月15日，美中将在白宫举行第一阶段贸易协议签署仪式，他会亲自参加。稍后他将赴北京讨论第二阶段协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:53 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766346.md#1" target="_blank">颜丹：是谁造出了“善小而不为”的中国人？</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766346.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/A006005-600x400-150x120.jpg" align ="left"></a>要想走出黑暗，就得战胜魔鬼，至少不能再去充当魔鬼的信徒。而选择与中共切割，就是走向光明的开始。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:28 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11765223.md#1" target="_blank">程晓容：党媒热捧李子柒 网红遇统战</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11765223.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-936798738-150x120.jpg" align ="left"></a>一曲田园牧歌和“社会主义”、“党的领导”、“四个自信”被捆绑在了一起。显然，中共在利用李子柒的人气来推销它的洗脑宣传，也就是，搞统战。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 7:00 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769903.md#1" target="_blank">关乐：就王志民下台寄语有良港警</a><br></h3>中南海招改，王志民被踹。
+恶党顶门棍，一折即远甩。
+张晓明或明，林郑恐也快。
+瞪眼邓炳强，甭老逞强坏。
+坚强之后盾，陷阱之花盖。
+谁当席梦思，谁被党活埋。
+看看周永康，你能比他帅？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 9:17 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769356.md#1" target="_blank">郑纯清：恶党末日临 动辄挨掌嘴</a><br></h3>恶党末日临 动辄挨掌嘴......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:49 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/4/n11768243.md#1" target="_blank">理悟：别当郎中当推手</a><br></h3>
 
