--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,8 +9,6 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱马尼被击毙 他是什么人？</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11770079.md#1">冯仑被退休：退休金8千 广场舞大妈都看不起</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783382.md#1">周晓辉：习近平失豪情身边聚庸才 路在哪里？</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783244.md#1">颜丹：“17人未脱贫”假在哪儿？</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783194.md#1">王友群：王立强曝光中共渗透台湾又添新证据</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783128.md#1">沁芳：“依法治国”下的强制采血</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782895.md#1">夏小强：中共操控台湾大选失败 蔡英文可能将大胜</a><br>
@@ -22,6 +20,8 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11781128.md#1">袁斌：伊朗上演复仇戏 中共党媒失望</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780728.md#1">王友群：天灾人祸不断伊朗报复美国难</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780521.md#1">周晓辉：川普暂停对伊军事行动与刘鹤将赴美</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780429.md#1">【名家专栏】美国公民教育与对未来的希望</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780425.md#1">颜丹：“安全”成上海特质多讽刺</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
@@ -31,7 +31,9 @@
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783300.md#1">美击杀伊朗将军震慑中南海 传8常委紧急开会</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783382.md#1">周晓辉：习近平失豪情身边聚庸才 路在哪里？</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783185.md#1">中国C919大飞机因技术瓶颈而延后</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783244.md#1">颜丹：“17人未脱贫”假在哪儿？</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783168.md#1">申鑫老板举报上海银行勾结宝能 侵吞百亿</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783079.md#1">台湾再获十企业投资 外银：经济居四小龙之首</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782943.md#1">【新闻看点】美中贸谈第2阶段上路？关税成常态</a><br>
@@ -40,12 +42,11 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782488.md#1">中国房企2019年逾500家破产</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11781155.md#1">前民阵主席：中国道德回升 法轮功起大作用</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783033.md#1">台湾大选背后无所不在的“老大哥”</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782834.md#1">大陆公寓第一股强制业主降租 涉数千套房源</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783329.md#1">对抗中共 美陆军将在太平洋部署特殊部队</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783319.md#1">当涉黑保护伞 宁夏两公安官员被处分</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780459.md#1">黑龙江法轮功学员王德海被迫害离世</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783156.md#1">中共称不干涉他国内政 遭王立强事件打脸</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782834.md#1">大陆公寓第一股强制业主降租 涉数千套房源</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782470.md#1">蔡正元遭控利诱王立强 蔡竞办：国民党应说清楚</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782396.md#1">港人请愿获回应 德国会将公开讨论香港局势</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782698.md#1">【专访】王定宇：台湾大选牵动美中台关系（下）</a><br>
@@ -87,9 +88,8 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780506.md#1">中南海大秘：中共高层心灰意懒 出工不出力</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779986.md#1">美议员：台湾应透过选举对中共说“不”</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780385.md#1">【新闻看点】王立强爆遭威胁 台大选狂澜骤起</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780326.md#1">晒与母亲合照宣传新片 徐峥不再以光头示人</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780590.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/2912962_1_1-150x120.jpg"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780590.md#1">反送中名人王婆婆被送押深圳：看守所如地狱</a><br>在香港反送中抗争现场挥舞英国国旗的 ...<br><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779645.md#1">2019年 近万名法轮功学员被绑架骚扰</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780320.md#1">军工高层传巨额贪腐自杀 中共战机员工维权</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779813.md#1">中共犯下反人类罪 美国会报告促制裁</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778253.md#1">鲁商被合同诈骗 法院三次秘密判决维权无门</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11778054.md#1">饮水工程强占地 河南五农场联名举报县政府</a><br><br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780594.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2018/08/1406300939412639-600x400-150x120.jpg"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780594.md#1">大陆“免裁券”闹剧 民众：别拿裁员开玩笑</a><br>就在大陆互联网行业裁员潮令民众人人 ...<br><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780497.md#1">刘鹤访美将签初步协议 川普：第二阶段将启</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780420.md#1">中美将签协议 难阻2020外商出走潮</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779864.md#1">脱贫率超99.99%？江苏“脱贫神话”遭质疑</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779137.md#1">售价贵服务差 天津百年老店狗不理陷困境</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779313.md#1">中国主要城市写字楼空置率惊人 近乎鬼城</a><br><br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780581.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/07/duwenze_meitu_1-150x120.jpg"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780581.md#1">46秒影片催人泪下 杜汶泽吁台湾人珍惜投票权</a><br>一直支持香港逆权运动的艺人杜汶泽， ...<br><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780639.md#1">【专访】台北议员苗博雅：大选预测及中共渗透（上）</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780549.md#1">【热点互动】伊朗放空枪 川普得分 中共失望？</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11771208.md#1">李子柒背后的“中国故事”</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780408.md#1">骆惠宁见深圳四高层和林郑 泄中共对港政策</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777696.md#1">美专家：北京可能成为台湾选举大输家</a><br><br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779091.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/000_HKG2003122958048-150x120.jpg"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779091.md#1">北大医学部教授：武汉肺炎人传人可能性大</a><br>据大陆专家初步判定，武汉的不明原因 ...<br><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778710.md#1">安徽长丰县重型货车和私家车相撞 致8死</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778417.md#1">新年第9日 北京房山发生3.2级地震</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778306.md#1">西藏暴雪湖南暴雨 大陆多地现雨雪天气</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778256.md#1">武汉肺炎为新型冠状病毒 跟此前发现的不同</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775361.md#1">港疑似武汉肺炎30宗 区议会促林郑赴汉视察</a><br><br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780383.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/191006-N-VI515-0396-600x400-1-150x120.jpg"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780383.md#1">【新闻看点】美杀苏莱曼尼 陆民赞：让领导先走</a><br>美国精准点杀伊朗二号人物、被联合国 ...<br><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778504.md#1">【拍案惊奇】危机未完全解除 美伊冲突内幕</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777700.md#1">印尼向争议海域派遣战机巡航 北京低调</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778497.md#1">汕头怀孕母牛三步一跪求生 网友买下放生</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778455.md#1">河南交通局副局长向司机要钱 视频曝光</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778525.md#1">每日三退声明精选（2020/01/08）</a><br><br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777510.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/03/yangzi_meitu_1-150x120.jpg"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777510.md#1">杨紫获大陆年度女演员和女明星商业价值双冠</a><br>1月7日，陆媒“腾讯娱乐白皮书”公布 ...<br><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777290.md#1">中共为何禁中小学使用境外教材</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11775957.md#1">西安高中生将老师杀害潜逃 已被抓获</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11773097.md#1">金球奖首位华裔影后 林家珍获喜剧最佳女主角</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766574.md#1">除掉伊朗二号人物 川普：为了止战非宣战</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11761587.md#1">红歌代替儿歌 大陆幼童也要表示效忠</a><br><br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11765947.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1086048850-150x120.jpg"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br>前谷歌高管罗斯·拉吉尼斯（Ross LaJ ...<br><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769412.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/e269c8c8ced63b0e542a3e28dbbd17d0-150x120.jpg"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769412.md#1">无锡访民联署“给黄钦书记的公开信”</a><br>2019年岁末，无锡市二十多名非法强拆 ...<br><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780590.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/2912962_1_1-150x120.jpg"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780590.md#1">反送中名人王婆婆被送押深圳：看守所如地狱</a><br>在香港反送中抗争现场挥舞英国国旗的 ...<br><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779645.md#1">2019年 近万名法轮功学员被绑架骚扰</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780320.md#1">军工高层传巨额贪腐自杀 中共战机员工维权</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779813.md#1">中共犯下反人类罪 美国会报告促制裁</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778253.md#1">鲁商被合同诈骗 法院三次秘密判决维权无门</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11778054.md#1">饮水工程强占地 河南五农场联名举报县政府</a><br><br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780594.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2018/08/1406300939412639-600x400-150x120.jpg"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780594.md#1">大陆“免裁券”闹剧 民众：别拿裁员开玩笑</a><br>就在大陆互联网行业裁员潮令民众人人 ...<br><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780497.md#1">刘鹤访美将签初步协议 川普：第二阶段将启</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780420.md#1">中美将签协议 难阻2020外商出走潮</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779864.md#1">脱贫率超99.99%？江苏“脱贫神话”遭质疑</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779137.md#1">售价贵服务差 天津百年老店狗不理陷困境</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779313.md#1">中国主要城市写字楼空置率惊人 近乎鬼城</a><br><br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780581.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/07/duwenze_meitu_1-150x120.jpg"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780581.md#1">46秒影片催人泪下 杜汶泽吁台湾人珍惜投票权</a><br>一直支持香港逆权运动的艺人杜汶泽， ...<br><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780639.md#1">【专访】台北议员苗博雅：大选预测及中共渗透（上）</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780549.md#1">【热点互动】伊朗放空枪 川普得分 中共失望？</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11771208.md#1">李子柒背后的“中国故事”</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780408.md#1">骆惠宁见深圳四高层和林郑 泄中共对港政策</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777696.md#1">美专家：北京可能成为台湾选举大输家</a><br><br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779091.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/000_HKG2003122958048-150x120.jpg"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11779091.md#1">北大医学部教授：武汉肺炎人传人可能性大</a><br>据大陆专家初步判定，武汉的不明原因 ...<br><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778710.md#1">安徽长丰县重型货车和私家车相撞 致8死</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778417.md#1">新年第9日 北京房山发生3.2级地震</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778306.md#1">西藏暴雪湖南暴雨 大陆多地现雨雪天气</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778256.md#1">武汉肺炎为新型冠状病毒 跟此前发现的不同</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775361.md#1">港疑似武汉肺炎30宗 区议会促林郑赴汉视察</a><br><br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780383.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/191006-N-VI515-0396-600x400-1-150x120.jpg"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780383.md#1">【新闻看点】美杀苏莱曼尼 陆民赞：让领导先走</a><br>美国精准点杀伊朗二号人物、被联合国 ...<br><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778504.md#1">【拍案惊奇】危机未完全解除 美伊冲突内幕</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777700.md#1">印尼向争议海域派遣战机巡航 北京低调</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778497.md#1">汕头怀孕母牛三步一跪求生 网友买下放生</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778455.md#1">河南交通局副局长向司机要钱 视频曝光</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11778525.md#1">每日三退声明精选（2020/01/08）</a><br><br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780326.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2015/09/1509141551211693-150x120.jpg"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780326.md#1">晒与母亲合照宣传新片 徐峥不再以光头示人</a><br>大陆明星徐峥为宣传自导自演的新片《 ...<br><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777510.md#1">杨紫获大陆年度女演员和女明星商业价值双冠</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777290.md#1">中共为何禁中小学使用境外教材</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11775957.md#1">西安高中生将老师杀害潜逃 已被抓获</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11773097.md#1">金球奖首位华裔影后 林家珍获喜剧最佳女主角</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766574.md#1">除掉伊朗二号人物 川普：为了止战非宣战</a><br><br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11765947.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1086048850-150x120.jpg"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br>前谷歌高管罗斯·拉吉尼斯（Ross LaJ ...<br><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769412.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/e269c8c8ced63b0e542a3e28dbbd17d0-150x120.jpg"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769412.md#1">无锡访民联署“给黄钦书记的公开信”</a><br>2019年岁末，无锡市二十多名非法强拆 ...<br><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
