--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782021.md#1">读《转法轮》澳洲西人找到生命意义</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783300.md#1">美击杀伊朗将军震慑中南海 传8常委紧急开会</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783382.md#1">周晓辉：习近平失豪情身边聚庸才 路在哪里？</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783185.md#1">中国C919大飞机因技术瓶颈而延后</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783005.md#1">库德洛：第一阶段后 川普不急达成另一协议</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782488.md#1">中国房企2019年逾500家破产</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11781155.md#1">前民阵主席：中国道德回升 法轮功起大作用</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783329.md#1">对抗中共 美陆军将在太平洋部署特殊部队</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783319.md#1">当涉黑保护伞 宁夏两公安官员被处分</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780459.md#1">黑龙江法轮功学员王德海被迫害离世</a><br>
