--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -32,7 +32,7 @@
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783463.md#1">大陆2019乘用车销量续跌  同比降7.5%</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782021.md#1">读《转法轮》澳洲西人找到生命意义</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783300.md#1">美击杀伊朗将军震慑中南海 传习招7常委紧急开会</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783300.md#1">美杀伊朗将军震慑中南海 传习招7常委紧急开会</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783329.md#1">对抗中共 美陆军将在太平洋部署特殊部队</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783382.md#1">周晓辉：习近平失豪情身边聚庸才 路在哪里？</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783185.md#1">中国C919大飞机因技术瓶颈而延后</a><br>
