--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11783658.md#1">【直播】决战2020 台湾大选开始投票</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783545.md#1">武汉不明肺炎出现首例死亡病例</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783463.md#1">大陆2019乘用车销量续跌  同比降7.5%</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782021.md#1">读《转法轮》澳洲西人找到生命意义</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783005.md#1">库德洛：第一阶段后 川普不急达成另一协议</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783013.md#1">一文看懂：台大选前 王立强受利诱和威胁始末</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783168.md#1">申鑫老板举报上海银行勾结宝能 侵吞百亿</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783079.md#1">台湾再获10企业投资 外银：经济居四小龙之首</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782930.md#1">黄渤饰教练引争议 《中国女排》或无缘新年档</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783219.md#1">13年从未放弃 电影《亲爱的》原型仍在寻子</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783413.md#1">黄秋生下周舌战何君尧 杜汶泽幽默分享经验</a><br>
